Test/git-issues/git-issue-283g.dfy.expect
git-issue-283g.dfy(20,21): Error: the type of the pattern (int) does not agree with the match expression (string)
git-issue-283g.dfy(32,14): Error: the type of the pattern (int) does not agree with the match expression (real)
git-issue-283g.dfy(41,14): Error: the type of the pattern (int) does not agree with the match expression (real)
3 resolution/type errors detected in git-issue-283g.dfy
